--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.exe
+Debug/OpenVRTest.exe
+*.opendb
+*.VC.db
+*.db
+*.tlog
+*.log
+*.ilk
+OpenVRTest/Debug/*.obj
+OpenVRTest/Release/*.obj
