VR Camera working

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,8 @@ Debug/OpenVRTest.exe
 *.ilk
 OpenVRTest/Debug/*.obj
 OpenVRTest/Release/*.obj
+*.pdb
+*.suo
+OpenVRTest/Debug/vrwindow.obj.enc
+*.idb
+OpenVRTest/Debug/vc140.pdb
