--- a/OpenVRTest/OpenVRTest.vcxproj
+++ b/OpenVRTest/OpenVRTest.vcxproj
@@ -89,7 +89,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)headers;$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -106,7 +106,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)headers;$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -125,7 +125,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)headers;$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,7 +146,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)headers;$(SolutionDir)..\RenderingEngineLibrary\include;$(SolutionDir)..\RenderingEngineLibrary\RenderingExtensions\headers;$(SolutionDir)..\RenderingEngineLibrary\RenderingLibrary\headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -161,10 +161,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="VRCamera.cpp" />
     <ClCompile Include="VRWindow.cpp" />
     <ClCompile Include="OpenVRTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="VRCamera.h" />
     <ClInclude Include="VRWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
