--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="VRWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VRCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VRWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VRCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
