--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClCompile Include="VRCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VRTools.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VRController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VRWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VRCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VRTools.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VRController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
