--- a/OpenVRTest/OpenVRTest.vcxproj
+++ b/OpenVRTest/OpenVRTest.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="OpenVRTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="kd_tree.h" />
     <ClInclude Include="VRController.h" />
     <ClInclude Include="VRTools.h" />
     <ClInclude Include="VRCamera.h" />
