--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ Debug/OpenVRTest.exe
 OpenVRTest/Debug/*.obj
 OpenVRTest/Release/*.obj
 OpenVRTest/x64/Release/
+OpenVRTest/x64/*
 x64/*
 OpenVRTest/untrackedmodels
 *.pdb
