Fog and controller positions

--- a/BUILD_PACKAGE/BUILD_PACKAGE.vcxproj
+++ b/BUILD_PACKAGE/BUILD_PACKAGE.vcxproj
@@ -79,7 +79,7 @@
       <Command>SET BuildDir=$(SolutionDir)BUILD_PACKAGE\$(Platform)\$(Configuration)\
 IF EXIST "%BuildDir%shaders" rd /s /q "%BuildDir%shaders/"
 IF EXIST "%BuildDir%models" rd /s /q "%BuildDir%models/"
-IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
+:: IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
 IF EXIST "%BuildDir%" del /q "%BuildDir%*"
 IF NOT EXIST "%BuildDir%" mkdir "%BuildDir%"
 IF NOT EXIST "%BuildDir%saved" mkdir "%BuildDir%saved\"
@@ -87,6 +87,7 @@ xcopy /s "$(SolutionDir)OpenVRTest\shaders" "%BuildDir%shaders\"
 xcopy /s "$(SolutionDir)OpenVRTest\models" "%BuildDir%models\"
 xcopy /s "$(SolutionDir)OpenVRTest\untrackedmodels" "%BuildDir%untrackedmodels\"
 xcopy "$(SolutionDir)OpenVRTest\openvr_api.dll" "%BuildDir%"
+xcopy "$(SolutionDir)OpenVRTest\default.cmp" "%BuildDir%"
 xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
 </Command>
     </PostBuildEvent>
@@ -107,7 +108,7 @@ xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
       <Command>SET BuildDir=$(SolutionDir)BUILD_PACKAGE\$(Platform)\$(Configuration)\
 IF EXIST "%BuildDir%shaders" rd /s /q "%BuildDir%shaders/"
 IF EXIST "%BuildDir%models" rd /s /q "%BuildDir%models/"
-IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
+:: IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
 IF EXIST "%BuildDir%" del /q "%BuildDir%*"
 IF NOT EXIST "%BuildDir%" mkdir "%BuildDir%"
 IF NOT EXIST "%BuildDir%saved" mkdir "%BuildDir%saved\"
@@ -115,6 +116,7 @@ xcopy /s "$(SolutionDir)OpenVRTest\shaders" "%BuildDir%shaders\"
 xcopy /s "$(SolutionDir)OpenVRTest\models" "%BuildDir%models\"
 xcopy /s "$(SolutionDir)OpenVRTest\untrackedmodels" "%BuildDir%untrackedmodels\"
 xcopy "$(SolutionDir)OpenVRTest\openvr_api.dll" "%BuildDir%"
+xcopy "$(SolutionDir)OpenVRTest\default.cmp" "%BuildDir%"
 xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
 </Command>
     </PostBuildEvent>
@@ -141,7 +143,7 @@ xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
       <Command>SET BuildDir=$(SolutionDir)BUILD_PACKAGE\$(Platform)\$(Configuration)\
 IF EXIST "%BuildDir%shaders" rd /s /q "%BuildDir%shaders/"
 IF EXIST "%BuildDir%models" rd /s /q "%BuildDir%models/"
-IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
+:: IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
 IF EXIST "%BuildDir%" del /q "%BuildDir%*"
 IF NOT EXIST "%BuildDir%" mkdir "%BuildDir%"
 IF NOT EXIST "%BuildDir%saved" mkdir "%BuildDir%saved\"
@@ -149,6 +151,7 @@ xcopy /s "$(SolutionDir)OpenVRTest\shaders" "%BuildDir%shaders\"
 xcopy /s "$(SolutionDir)OpenVRTest\models" "%BuildDir%models\"
 xcopy /s "$(SolutionDir)OpenVRTest\untrackedmodels" "%BuildDir%untrackedmodels\"
 xcopy "$(SolutionDir)OpenVRTest\openvr_api.dll" "%BuildDir%"
+xcopy "$(SolutionDir)OpenVRTest\default.cmp" "%BuildDir%"
 xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
 </Command>
     </PostBuildEvent>
@@ -175,7 +178,7 @@ xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
       <Command>SET BuildDir=$(SolutionDir)BUILD_PACKAGE\$(Platform)\$(Configuration)\
 IF EXIST "%BuildDir%shaders" rd /s /q "%BuildDir%shaders/"
 IF EXIST "%BuildDir%models" rd /s /q "%BuildDir%models/"
-IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
+:: IF EXIST "%BuildDir%untrackedmodels" rd /s /q "%BuildDir%untrackedmodels/"
 IF EXIST "%BuildDir%" del /q "%BuildDir%*"
 IF NOT EXIST "%BuildDir%" mkdir "%BuildDir%"
 IF NOT EXIST "%BuildDir%saved" mkdir "%BuildDir%saved\"
@@ -183,6 +186,7 @@ xcopy /s "$(SolutionDir)OpenVRTest\shaders" "%BuildDir%shaders\"
 xcopy /s "$(SolutionDir)OpenVRTest\models" "%BuildDir%models\"
 xcopy /s "$(SolutionDir)OpenVRTest\untrackedmodels" "%BuildDir%untrackedmodels\"
 xcopy "$(SolutionDir)OpenVRTest\openvr_api.dll" "%BuildDir%"
+xcopy "$(SolutionDir)OpenVRTest\default.cmp" "%BuildDir%"
 xcopy "$(SolutionDir)$(Platform)\$(Configuration)\*.exe" "%BuildDir%"
 </Command>
     </PostBuildEvent>
