--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="VRColorShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VRView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VRWindow.h">
@@ -75,6 +78,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VRColorShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\headers\ConvexHull.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VRView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
