--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="VRView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BlinnPhongShaderVR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
