--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="BlinnPhongShaderVR.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ControllerMovement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
