--- a/OpenVRTest/OpenVRTest.vcxproj.filters
+++ b/OpenVRTest/OpenVRTest.vcxproj.filters
@@ -74,5 +74,13 @@
     <ClInclude Include="ControllerMovement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="OpenVRTest.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
